--- a/src/app/shared-components/image-handler/image-handler.component.scss
+++ b/src/app/shared-components/image-handler/image-handler.component.scss
@@ -1,5 +1,6 @@
 :host {
   width: 100%;
+  display: block;
 }
 
 .image-box {
@@ -11,6 +12,7 @@
   background-color: #e5e5e5;
   border-radius: 2px 2px 0 0;
   overflow: hidden;
+  margin: 0 auto;
 
   &.no-background {
     background-color: transparent;
